--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        
+        <!-- animsition.css -->
+        <link rel="stylesheet" href="css/animsition.css">
         <link rel="stylesheet" href="css/style.css">
-  
+        <script src="js/animsition.js"></script>
         <script src="js/main.js"></script>
         <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDW7ZGgdArV8d-CHOxT31HvvGpptpittWs&callback=initMap">
@@ -31,8 +32,8 @@
           <div class="collapse navbar-collapse" id="myNavBar">            
             <!-- Right side elements -->
             <ul class="nav navbar-nav navbar-right nav-text">
-              <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
-              <li><a href="articles.html"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Articles</a></li>
+              <li class="active" class="animsition-link" data-animsition-out-class="fade"><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
+              <li><a href="articles.html" ><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Articles</a></li>
               <li><a href="chat.html"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> Chat</a></li>
               <li><a href="register.html"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Register</a></li>
               <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About us</a></li>             
