--- a/src/articles.html
+++ b/src/articles.html
@@ -4,15 +4,9 @@
         <title>Amazing Website v1.0</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        
-        <link rel="stylesheet" href="css/style.css">
-  
-        <script src="js/main.js"></script>
-        <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDW7ZGgdArV8d-CHOxT31HvvGpptpittWs&callback=initMap">
-    </script>
-        
+        <link rel="stylesheet" href="css/bootstrap.min.css">     
+        <link rel="stylesheet" href="css/style.css"> 
+        <script src="js/main.js"></script>       
    </head>
 <body> 
         <section class="pagefade" style="display: none">
@@ -28,7 +22,7 @@
               <span class="icon-bar"></span>
           </button>
           <!-- When menubar collapses, only the "brand" button and toggle will remain -->
-          <a class="navbar-brand" href="index.html"><img src="logo.png" alt="Amazing logo"></img></a> 
+          <a class="navbar-brand" href="index.html"><img src="dist/img/logo.png" alt="Amazing logo"></img></a> 
           </div>   
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="myNavBar">            
@@ -70,8 +64,8 @@
       </footer>
       <!-- footer end-->
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="js/jquery-3.2.1.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
       <script src="pagefadejs/pagefade-min.js"></script>
     </section>        
 </body>
