--- a/src/aboutus.html
+++ b/src/aboutus.html
@@ -69,13 +69,22 @@
         
                     <div class="tab-content clearfix">
                       <div class="tab-pane active" id="1b">
+                  <div class="row">
+                        
+                      <div class="col-sm-4 tab-pane" id="1b"><br>
+                          <img style="width: 300px; height: auto; box-shadow: 5px 30px 40px rgba(0,0,0,.3);" src="dist/img/thumbnail.jpg"><img>
+                      </div>
+                      <div class="col-sm-8 article">
                   <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
                 aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
                 voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                deserunt mollit anim id est laborum.</p><br><br><br>
+                deserunt mollit anim id est laborum.</p>
+                        </div>
+                        <br><br><br>
+                  </div>
                         </div>
                         <div class="tab-pane" id="2b">
                                 <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -92,7 +101,7 @@
                             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
                             deserunt mollit anim id est laborum.</p><br><br><br>
                         </div>
-                  <div class="tab-pane" id="4b">
+                  <div class="tab-pane" id="4a">
                         <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
@@ -104,7 +113,7 @@
                         </div>
                     </div>
           </div>
-
+        <br><br><br>
           <div class="container">
                 <h3 style="font-variant: small-caps;"><strong>contacts</strong></h3>
             </div>
