updated register, aboutus & thumbnails

--- a/src/aboutus.html
+++ b/src/aboutus.html
@@ -72,7 +72,7 @@
                   <div class="row">
                         
                       <div class="col-sm-4 tab-pane" id="1b"><br>
-                          <img style="width: 300px; height: auto; box-shadow: 5px 30px 40px rgba(0,0,0,.3);" src="dist/img/thumbnail.jpg"><img>
+                          <img style="width: 300px; height: auto; box-shadow: 5px 30px 40px rgba(0,0,0,.3);" src="dist/img/thumbnail3.jpg"><img>
                       </div>
                       <div class="col-sm-8 article">
                   <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
