--- a/src/aboutus.html
+++ b/src/aboutus.html
@@ -24,7 +24,7 @@
               <span class="icon-bar"></span>
           </button>
           <!-- When menubar collapses, only the "brand" button and toggle will remain -->
-          <a class="navbar-brand" href="index.html"><img src="dist/img/logo.png" alt="Amazing logo"></img></a> 
+          <a class="navbar-brand" href="index.html"><img src="dist/img/logo.png" width="30" height="30" alt="Amazing logo"></img></a> 
           </div>   
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="myNavBar">            
@@ -75,13 +75,13 @@
                           <img style="width: 300px; height: auto; box-shadow: 5px 30px 40px rgba(0,0,0,.3);" src="dist/img/thumbnail3.jpg"><img>
                       </div>
                       <div class="col-sm-8 article">
-                  <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                  <span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
                 aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
                 voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                deserunt mollit anim id est laborum.</p>
+                deserunt mollit anim id est laborum.</span>
                         </div>
                         <br><br><br>
                   </div>
