--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
               <span class="icon-bar"></span>
           </button>
           <!-- When menubar collapses, only the "brand" button and toggle will remain -->
-          <a class="navbar-brand" href="index.html"><img src="dist/img/logo.png" alt="Amazing logo"></img></a> 
+          <a class="navbar-brand" href="index.html"><img src="dist/img/logo.png" width="30" height="30" alt="Amazing logo"></img></a> 
           </div>   
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="myNavBar">            
@@ -86,10 +86,10 @@
           <div class="container">
             <div class="row text-center">
                 <div class="col-sm-4 article">
-                    <div class="col-sm-4 article"><p style="float: left;"><img src="dist/img/thumbnail2.jpg" height="100px" width="100px"></p>
+                    <div class="col-sm-4 article"><p style="float: left;"><img src="dist/img/thumbnail2.jpg"  height="100px" width="100px"></p>
                     </div>
                     <div class="col-sm-8 article">
-                        <p class="thumbnail-text"><a href="#"><strong>Article 1</strong></a><br>
+                        <p class="thumbnail-text"><a href="1mdpg2.html"><strong>New York</strong></a><br>
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad...</p>
                 </div>
                 </div>
@@ -97,7 +97,7 @@
                         <div class="col-sm-4 article"><p style="float: left;"><img src="dist/img/thumbnail2.jpg" height="100px" width="100px"></p>
                         </div>
                         <div class="col-sm-8 article">
-                            <p class="thumbnail-text"><a href="#"><strong>Article 2</strong></a><br>
+                            <p class="thumbnail-text"><a href="1mdpg2.html"><strong>Los Angeles</strong></a><br>
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad...</p>
                     </div>
                     </div>
@@ -105,7 +105,7 @@
                             <div class="col-sm-4 article"><p style="float: left;"><img src="dist/img/thumbnail2.jpg" height="100px" width="100px"></p>
                             </div>
                             <div class="col-sm-8 article">
-                                <p class="thumbnail-text"><a href="#"><strong>Article 3</strong></a><br>
+                                <p class="thumbnail-text"><a href="1mdpg2.html"><strong>Dubai</strong></a><br>
                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad...</p>
                         </div>
                         </div>
