--- a/src/register.html
+++ b/src/register.html
@@ -24,7 +24,7 @@
               <span class="icon-bar"></span>
           </button>
           <!-- When menubar collapses, only the "brand" button and toggle will remain -->
-          <a class="navbar-brand" href="index.html"><img src="dist/img/logo.png" alt="Amazing logo"></img></a> 
+          <a class="navbar-brand" href="index.html"><img src="dist/img/logo.png" width="30" height="30" alt="Amazing logo"></img></a> 
           </div>   
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="myNavBar">            
