removed pagefade from index

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <script src="js/main.js"></script> 
    </head>
 <body> 
-    <section class="pagefade" style="display: none">
+    <!-- <section class="pagefade" style="display: none"> -->
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -124,10 +124,10 @@
             </div>      
         </footer>
           <!-- footer end-->
-       </section>    
+       <!-- </section> -->
        <script src="js/jquery-3.2.1.min.js"></script>
        <script src="js/bootstrap.min.js"></script>
-       <script src="pagefadejs/pagefade-min.js"></script>
+       <!-- <script src="pagefadejs/pagefade.js"></script> -->
                   
 </body>
 </html>
